Add a modal to edit picture.

--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -8,7 +8,8 @@
             <h5 class="activator">{{idea.idea_title}}</h5>
 
             <h6 class="activator">{{idea.category_name}}</h6>
-            <h6 class="activator"><img src="/static/images/thumb_up-black-18dp.svg" alt="thumb up">{{idea.total_votes}}
+            <h6 class="activator"><img class="responsive-img" src="/static/images/thumb_up-black-18dp.svg"
+                    alt="thumb up">{{idea.total_votes}}
             </h6>
         </span>
     </div>
