--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -47,6 +47,7 @@
       $('input#input_text, textarea#textarea1, textarea#textarea2, textarea#textarea3').characterCounter();
       $('form:first *:input[type!=hidden]:first').focus();
       $(".dropdown-trigger").dropdown();
+      $('.modal').modal();
     });
   </script>
 
