--- a/static/css/override.css
+++ b/static/css/override.css
@@ -1,3 +1,12 @@
+.image-container {
+    height: 350px;
+    object-fit: cover;
+}
+
+.image-container__detail {
+    /* height: 200px; */
+}
+
 p {
     color: pink;
 }
