Add date added field to idea details.

--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-
+<p>{{idea.date_added}}</p>
 <h1>{{idea.idea_title}}</h1>
 <p>Submitted by: {{idea.username}}</p>
 <p>{{idea.idea_summary}}</p>
