Add views counter to ideas.

--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -11,6 +11,7 @@
             <h6 class="activator"><img class="responsive-img" src="/static/images/thumb_up-black-18dp.svg"
                     alt="thumb up">{{idea.total_votes}}
             </h6>
+            <h6>Views: {{idea.views}}</h6>
         </span>
     </div>
     <div class="card-reveal">
