--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="{{url_for('static', filename='css/override.css')}}" type="text/css" />
+
+
   <link rel="icon" href="{{ url_for('static', filename='favicon1.ico') }}" type="image/x-icon" />
 
   {% if title %}
