--- a/templates/components/search_cat_tag.html
+++ b/templates/components/search_cat_tag.html
@@ -1,27 +1,29 @@
-<form action="{{ url_for('search_by_category') }}" method="POST" class="col s12">
-    <div class="row">
-        <div class="input-field col s3">
-            <i class="material-icons prefix">search</i>
-            <select id="category" name="category_name" onchange='if(this.value != "") { this.form.submit(); }'>
-                <option value="" disabled selected>Search by Category</option>
-                {% for category in categories %}
-                <option value="{{category.category_name}}">{{category.category_name}}</option>
-                {% endfor %}
-            </select>
+<div class="row col s12">
+    <form action="{{ url_for('search_by_category') }}" method="POST" class="col s6">
+        <div class="row">
+            <div class="input-field">
+                <i class="material-icons prefix">search</i>
+                <select id="category" name="category_name" onchange='if(this.value != "") { this.form.submit(); }'>
+                    <option value="" disabled selected>Search by Category</option>
+                    {% for category in categories %}
+                    <option value="{{category.category_name}}">{{category.category_name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
 
-<form action="{{ url_for('search_by_tag') }}" method="POST" class="col s12">
-    <div class="row">
-        <div class="input-field col s3">
-            <i class="material-icons prefix">search</i>
-            <select id="tag" name="tag_name" onchange='if(this.value != "") { this.form.submit(); }'>
-                <option value="" disabled selected>Search by Tag</option>
-                {% for tag in tags %}
-                <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
-                {% endfor %}
-            </select>
+    <form action="{{ url_for('search_by_tag') }}" method="POST" class="col s6">
+        <div class="row">
+            <div class="input-field">
+                <i class="material-icons prefix">search</i>
+                <select id="tag" name="tag_name" onchange='if(this.value != "") { this.form.submit(); }'>
+                    <option value="" disabled selected>Search by Tag</option>
+                    {% for tag in tags %}
+                    <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</div>
