--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -42,6 +42,7 @@
   {% include 'layouts/footer.html' %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script type="text/javascript" src="/static/js/app.js"></script>
   <script type="text/javascript">
     $(document).ready(function () {
       $('.sidenav').sidenav();
@@ -50,6 +51,9 @@
       $('form:first *:input[type!=hidden]:first').focus();
       $(".dropdown-trigger").dropdown();
       $('.modal').modal();
+      $('.fixed-action-btn').floatingActionButton({
+        toolbarEnabled: true
+      });
     });
   </script>
 
