--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -1,7 +1,7 @@
 {% block navigation %}
 <div class="navbar-fixed">
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper amber darken-4">
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{url_for('home')}}">Home</a></li>
