--- a/static/css/override.css
+++ b/static/css/override.css
@@ -1,79 +1,55 @@
 .wrapper {
-    width: 800px;
-    margin: 0 auto;
-}
-
-.edit-idea {
-    margin-top: 1rem;
-}
-
-.idea-details h1 {
-    font-size: 3rem;
-    margin: 1rem 0 2rem 0;
-}
-
-.image-container__detail {
-    height: 300px;
-    width: 100%;
-    max-width: 800px;
-    object-fit: cover;
-
-}
-
-.card {
-    font-size: 0.8rem;
-}
-
-.s4 {
-    width: 30%;
-}
-
-/* h5 {
-    font-size: 1.3rem;
-} */
-/* .chip {
-    max-width: 250px;
-} */
-
-/* p {
-    color: pink;
-} */
-
-.background {
-    background-color: lightgrey;
-}
-
-.make-black .a {
-    color: black;
+  width: 800px;
+  margin: 0 auto;
 }
 
 .my-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-gap: 1rem;
 }
 
 .my-grid-2 {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-.card-tags {
-    display: grid;
-}
-
-.chip {
-    background-color: orangered;
-    color: white;
-    max-width: 90px;
-    padding: 0;
-    border-radius: 0;
-    font-weight: initial;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 @media screen and (min-width: 1025px) {
-
-    .my-grid-2 {
-        grid-template-columns: 1fr 1fr;
-    }
+  .my-grid-2 {
+    grid-template-columns: 1fr 1fr;
+  }
 }
+.card {
+  font-size: 0.8rem;
+}
+
+.edit-idea {
+  margin-top: 1rem;
+}
+
+.idea-details h1 {
+  font-size: 3rem;
+  margin: 1rem 0 2rem 0;
+}
+
+.image-container__detail {
+  height: 300px;
+  width: 100%;
+  max-width: 800px;
+  object-fit: cover;
+}
+
+.chip {
+  background-color: orangered;
+  color: white;
+  max-width: 90px;
+  padding: 0;
+  border-radius: 0;
+  font-weight: initial;
+}
+
+.card-tags {
+  display: grid;
+}
+
+/*# sourceMappingURL=override.css.map */
