--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,13 +19,13 @@
 </head>
 
 <body>
+
   <header>
     {% block headerbutton %}
     {% endblock %}
     {% include 'layouts/navigation.html' %}
-
-
   </header>
+
   <div class="container">
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
@@ -39,7 +39,9 @@
     {% block content %}
     {% endblock %}
   </div>
+
   {% include 'layouts/footer.html' %}
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript" src="/static/js/app.js"></script>
@@ -51,8 +53,9 @@
       $('form:first *:input[type!=hidden]:first').focus();
       $(".dropdown-trigger").dropdown();
       $('.modal').modal();
-      $('.fixed-action-btn').floatingActionButton({
-        toolbarEnabled: true
+      $('.carousel').carousel({
+        fullWidth: true,
+        indicators: true
       });
     });
   </script>
