--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -25,7 +25,8 @@
     {% endblock %}
     {% include 'layouts/navigation.html' %}
   </header>
-
+  {% block hero %}
+  {% endblock %}
   <div class="container">
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
@@ -44,8 +45,8 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="/static/js/app.js"></script>
-  <script type="text/javascript">
+
+  <script type=" text/javascript">
     $(document).ready(function () {
       $('.sidenav').sidenav();
       $('select').formSelect();
@@ -59,6 +60,7 @@
       });
     });
   </script>
+  <!-- <script type="text/javascript" src="/static/js/stickyHeader.js></script> -->
 
 </body>
 
