--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -3,9 +3,9 @@
     <nav>
         <div class="nav-wrapper nav-grid">
             <!-- <div class="nav-grid"> -->
-            <a href="/static/images/logo_white.png" class="brand-logo nav-wrapper__left">Logo</a>
-
-            <a href="{{url_for('addidea')}}" class="waves-effect waves-light btn nav-wrapper__middle">add idea</a>
+            <a href="#" class="brand-logo nav-wrapper__left"> <img class="brand-logo-img"
+                    src="/static/images/logo_white.png"> </a>
+            <h5 class="nav-wrapper__middle">{{title}}</h5>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger nav-wrapper__right"><i
                     class="material-icons">menu</i></a>
             <!-- </div> -->
@@ -14,7 +14,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{{url_for('home')}}">Home</a></li>
                 <li><a href="{{url_for('ideas')}}">Ideas</a></li>
-                <li><a href="{{url_for('problems')}}">Problems</a></li>
+                <li><a href="{{url_for('contact')}}">Contact</a></li>
                 {% if 'username' in session %}
                 <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
                 <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
@@ -32,7 +32,7 @@
 <ul class="sidenav" id="mobile-demo">
     <li><a href="{{url_for('home')}}">Home</a></li>
     <li><a href="{{url_for('ideas')}}">Ideas</a></li>
-    <li><a href="{{url_for('problems')}}">Problems</a></li>
+    <li><a href="{{url_for('contact')}}">Contact</a></li>
     {% if 'username' in session %}
     <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
     <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
