--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,4 +1,9 @@
 {% extends 'layouts/base.html'%}
 {% block content %}
-<h1>Home</h1>
+<h1>Great Green Environment</h1>
+<h4>100,000 Euro price money!</h4>
+<p>Do you have a great idea that can make a difference in the fight against climate change?</p>
+<p>Join our contest and get a share of the 100.000 Euro to make your idea reality!</p>
+<a href="{{url_for('register')}}" class="waves-effect waves-light btn nav-wrapper__middle">join</a>
+
 {% endblock %}
