--- a/static/css/override.css
+++ b/static/css/override.css
@@ -26,6 +26,11 @@ h1 {
   font-size: 0.8rem;
 }
 
+.card-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
 .edit-idea {
   margin-top: 1rem;
 }
@@ -70,10 +75,16 @@ h1 {
   margin: 0 0 1rem 0;
 }
 
+nav {
+  box-shadow: none;
+}
 nav .nav-wrapper {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   align-items: center;
+}
+nav .nav-wrapper .brand-logo-img {
+  height: 35px;
 }
 nav .nav-wrapper__left {
   grid-column: 1;
@@ -93,7 +104,27 @@ nav .nav-wrapper__right {
 }
 
 .carousel {
-  margin-top: 1rem;
+  margin-top: 0rem;
+}
+.carousel .carousel-item {
+  background-color: #ee6e73;
+  background-color: white;
+}
+
+.hero__cta-bar {
+  background-color: #ee6e73;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  padding-bottom: 1rem;
+}
+.hero__cta-bar--text {
+  text-align: center;
+  color: white;
+  padding: 1rem;
+}
+.hero__cta-bar--btn {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
 }
 
 /*# sourceMappingURL=override.css.map */
