--- a/static/css/scss/_ideas.scss
+++ b/static/css/scss/_ideas.scss
@@ -1,3 +1,28 @@
 .carousel {
-    margin-top: 1rem;
+    margin-top: 0rem;
+    
+
+    .carousel-item {
+        background-color: #ee6e73;
+        background-color: white;
+    }
+
+}
+
+.hero__cta-bar {
+    background-color: #ee6e73;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    padding-bottom: 1rem;
+
+    &--text {
+        text-align: center;
+        color: white;    
+        padding: 1rem;    
+    }
+
+    &--btn {
+        display: block;
+        margin: 0 auto;
+        width: 100px;
+    }
 }
