--- a/templates/components/idea_card.html
+++ b/templates/components/idea_card.html
@@ -7,7 +7,7 @@
             <h4 class="activator">{{idea.idea_title}}</h4>
 
 
-            <div class="row">
+            <div class="card-grid">
                 <div class="col s2">
                     <i class="material-icons">thumb_up</i>
                 </div>
@@ -26,18 +26,6 @@
     <div class="card-reveal">
         <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
         <h6 class="activator">Category: {{idea.category_name}}</h6>
-        <!-- <h6>Category: {{idea.category_name}}</h6> -->
-        <!-- <div class="card-tags">
-            <div class="chip card-tags__color">
-                {{idea.idea_tag1}}
-            </div>
-            <div class="chip card-tags__color">
-                {{idea.idea_tag2}}
-            </div>
-            <div class="chip card-tags__color">
-                {{idea.idea_tag3}}
-            </div>
-        </div> -->
         <div class="card-tags">
             <h6>Tags: {{idea.idea_tag1}} {{idea.idea_tag2}} {{idea.idea_tag3}}
 
