--- a/templates/components/idea_carousel.html
+++ b/templates/components/idea_carousel.html
@@ -2,15 +2,17 @@
     <div class="carousel-fixed-item center">
         <!-- <a class="btn waves-effect white grey-text darken-text-2">button</a> -->
     </div>
-    <div class="carousel-item red white-text" href="#one!">
+    <div class="carousel-item white-text" href="#one!">
         <h2>Top 3 Ideas</h2>
-        <p class="white-text">This is your first panel</p>
+
+
+
     </div>
-    <div class="carousel-item amber white-text" href="#two!">
+    <div class="carousel-item white-text" href="#two!">
         <h2>Second Panel</h2>
         <p class="white-text">This is your second panel</p>
     </div>
-    <div class="carousel-item green white-text" href="#three!">
+    <div class="carousel-item white-text" href="#three!">
         <h2>Third Panel</h2>
         <p class="white-text">This is your third panel</p>
     </div>
