--- a/static/css/scss/_idea_card.scss
+++ b/static/css/scss/_idea_card.scss
@@ -3,9 +3,36 @@
     font-size: 0.8rem;
 }
 
+.card-content-title {
+    text-align: center;
+}
+
 .card-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-   
+    column-gap: 0.6rem;
 
+    &__fr1 {
+        justify-self: end;
+    }
+
+    &__fr3 {
+        justify-self: end;
+    }
+
+    &__fr4 {
+        justify-self: start;
+    }
+
+    &__row2--left {
+        grid-column: 1 / 3;
+        justify-self: center;
+        font-size: 1rem;
+    }
+
+    &__row2--right {
+        grid-column: 3/5;
+        justify-self: center;
+        font-size: 1rem;
+    }
 }
